# AIQualityControl

./: .gitignore  README.md  data-for-ml.dvc  main.py  mkdocs.yml  pyproject.toml  train-data-cleaned.dvc  train-data.dvc
.dvc/: config
data-ingestion/: ReadME.md  bookkeeping_fetch_and_filter_runs.py  convert_root_to_tensor.py  download_data_from_qcdb.py  filter_qcdb_objects_based_on_bkkp_runs.py  filter_qcdb_objects_based_on_quality_summaries.py  main.ipynb  mo_matching_validation.ipynb  utils.py
data-ingestion/automated_data_curation/: sync_qcdb_checks.py
data/tpc/: test.dvc  train.dvc
data_curation/: bookkeeping_fetch_and_filter_runs.py  download_data_from_qcdb.py  mo_matching_validation.ipynb
data_curation/permissions/: ali-bookkeeping.cern.ch.pem  bkkp_api_personal_token.py
data_curation/postgres_db/: config.json  create_db_user.sql  docker-compose.yaml  sync_bkkp.py  sync_bkkp_and_qcdb.py
data_curation/postgres_db/init/: 01_schema.sql
docs/: getting-started.md  index.md
docs/how-to/: download-from-qcdb.md
documentation/: bkkp-api-single-run-output.json
dvc-test-data/tpc/: .gitignore  train-data.dvc
models/autoencoder/: anomaly_scoring.py  dataset.py  eval.py  model.py  params.yaml  readme.txt  train.py  utils.py
models/autoencoder/tmp_plots/: scores.npz
tpc-autoencoder/: create_qc_db_from_root_objects.py  download_data_qcdb.py  failed_to_enter_db.txt  inspect_root_file.py  interact_with_quality_db.ipynb  quality_summary.pkl
