[project]
name = "ai-for-data-quality-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "jupyter>=1.1.1",
    "logger>=1.4",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "plotly>=6.5.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
]
